fixed not scrolling on mobile

--- a/website/static/styles/base.css
+++ b/website/static/styles/base.css
@@ -17,7 +17,7 @@
 }
 
 html {
-    overflow-y: hidden;
+    overflow-y: scroll;
     height: 100%;
     margin: 0px;
     padding: 0;
